--- a/subtractMatrix/index.html
+++ b/subtractMatrix/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SumofMatrixes</title>
+    <title>SubtractionofMatrixes</title>
 </head>
 <body>
     <h4>Size of matrixes:</h4>
@@ -13,9 +13,9 @@
     <input type="text" id="firstMatrix">
     <input type="text" id="firstMatrix1">
     <h4>Elements of the second matrix:</h4>
-    <input type="text" id="secondMatrix">pu
+    <input type="text" id="secondMatrix">
     <input type="text" id="secondMatrix1">
-    <button onclick="addMatrix()">Sum it!</button>
+    <button onclick="subtractMatrix()">Subtract!</button>
 
     <h3 id="showResult"></h3>
     <script src="index.js"></script>
