Added Prime Number

--- a/repeatingNumbers/index.html
+++ b/repeatingNumbers/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odd Numbers in Array</title>
+    <title>Repeating Numbers in an Array</title>
 </head>
 <body>
-        <input id="inputNumber" type="text" maxlength="10">
-        <button onclick="findOddNumbers()">Find!</button>
-        <h2 id="showResult"></h2>
+    
+    <input type="text" id="inputNumbers" minlength="8">
+    <button onclick="findNumbers()">Find!</button>
 
+    <h2 id="showResult"></h2>
     <script src="index.js"></script>
 </body>
 </html>
