--- a/primeNumber/index.html
+++ b/primeNumber/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odd Numbers in Array</title>
+    <title>Prime Number</title>
 </head>
+
 <body>
-        <input id="inputNumber" type="text" maxlength="10">
-        <button onclick="findOddNumbers()">Find!</button>
-        <h2 id="showResult"></h2>
+
+    <input type="text" id="inputNumber">
+    <button onclick="checkNumber()">Check!</button>
+    <h2 id="showResult"></h2>
+
 
     <script src="index.js"></script>
 </body>
+
 </html>
